syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.grpc.proto";

message cidadeDTO {
  int64 codigo = 1;
  string nome = 2;
}

message CidadeRequest {
  int64 a = 1;
}
message CidadesResponse {
  repeated cidadeDTO cidades = 1;
}

message emptyCidade {}

service CidadeService {
  rpc obterCidades(emptyCidade) returns (CidadesResponse);
}